--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -123,6 +123,25 @@ input[type="text"] {
 	border-color: $secondary-color;
 }
 
+.popup {
+	position: absolute;
+	top: 50px;
+	z-index: 1;
+	padding: 25px;
+	border-radius: 5px;
+	border: 2px solid $secondary-color;
+	background: $dark-color;
+}
+
+.help {
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	margin: 0 20px;
+	text-align: center;
+	cursor: pointer;
+}
+
 .dropdown {
 	position: relative;
 	overflow: hidden;
