Fix(textarea): Fix the size of the textarea

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -151,6 +151,8 @@ input[type="text"] {
 }
 
 textarea {
+	width: 400px;
+	height: 50px;
 	padding: 10px;
 	border: 1px solid;
 	border-radius: 5px;
