--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -687,8 +687,8 @@
 	<p innerHtml="{{ 'CREATION.IDENTITY.TEXT' | translate }}"></p>
 	<span>Nom du personnage</span>
 	<input type="text" (change)="changeName($event.target)" />
-	<span>Description du personnage</span>
-	<textarea (change)="changeDescription($event.target)"></textarea>
+	<span>Description rapide du personnage (max : 130 caract.)</span>
+	<textarea maxlength="130" (change)="changeDescription($event.target)"></textarea>
 	<span>Avatar du personnage</span>
 	<label for="avatar" class="creation-avatar">
 		<span *ngIf="!avatar">Importer une image<br>(ratio 1:1 | JPG, PNG | max 2Mo)</span>
