--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -2,6 +2,7 @@
 	<h1>{{ "CREATION.MENU.TITLE" | translate }}</h1>
 	<p innerHtml="{{ 'CREATION.HEROS' | translate }}"></p>
 	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                             PART I : RACE                                            ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.TITLE01" | translate }}</h2>
 	<img
@@ -79,6 +80,7 @@
 		</tbody>
 	</table>
 	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                         PART II : CARACTERISTICS                                     ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.TITLE02" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.CARACTS01' | translate }}"></p>
@@ -153,6 +155,7 @@
 		</tbody>
 	</table>
 	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                           PART III : SKILLS                                          ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.TITLE03" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.SKILLS.TEXT01' | translate }}"></p>
@@ -440,6 +443,7 @@
 		</tbody>
 	</table>
 	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                           PART IV : CRYSTALS                                         ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.TITLE04" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.CRYSTALS.TEXT01' | translate }}"></p>
@@ -587,6 +591,7 @@
 		</tbody>
 	</table>
 	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                           PART V : EQUIPMENT                                         ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.TITLE05" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.EQUIPEMENT.TEXT' | translate }}"></p>
@@ -682,6 +687,7 @@
 		></p>
 	</div>
 	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                             PART VI : IDENTITY                                       ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.TITLE06" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.IDENTITY.TEXT' | translate }}"></p>
@@ -694,7 +700,9 @@
 		<span *ngIf="!avatar">Importer une image<br>(ratio 1:1 | JPG, PNG | max 2Mo)</span>
 		<img *ngIf="avatar" alt="" [src]="avatar"/>
 	</label>
-	<input type="file" name="avatar" id="avatar" accept="image/png, image/jpeg" (change)="changeAvatar($event.target)" /><!--------------------------------------------------------------------------------------------------------------->
+	<input type="file" name="avatar" id="avatar" accept="image/png, image/jpeg" (change)="changeAvatar($event.target)" />
+	<!--------------------------------------------------------------------------------------------------------------->
+	<!------------                              CONCLUSION                                              ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
 	<h2>{{ "CREATION.MENU.CONCLUSION" | translate }}</h2>
 	<p innerHtml="{{ listWarnings }}"></p>
