Fix(creation): Fix the inconvenient of the elfes, and add a list of powers

--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -470,6 +470,7 @@
 		</tbody>
 	</table>
 	<p innerHtml="{{ 'CREATION.CRYSTALS.TEXT02' | translate }}"></p>
+	<button><a href="./assets/files/Annexe_Cristaux.pdf" download>{{ 'ROLEPLAY.FILES.LISTPOWERS' | translate | uppercase }}</a></button>
 	<table>
 		<thead>
 			<tr>
