--- a/src/app/components/creation-slider/creation-slider.component.html
+++ b/src/app/components/creation-slider/creation-slider.component.html
@@ -6,7 +6,7 @@
 		<button class="cs-button" [ngClass]="{'disabled': !canUp }" (click)="upValue()">&#8250;</button>
 	</td>
 	<td *ngIf="hasSpecialistic || hasCristalSpecialistic" class="cs-spe">
-		<span>Spécialité (option) :</span>
+		<span>{{ "CREATION.INDICS.SPE" | translate }} :</span>
 		<div *ngIf="hasSpecialistic" class="dropdown">
 			<select class="dropdown-select" (change)="speChange($event.target.value)">
 				<option value=""></option>
